@@ -16,6 +16,8 @@ Changes in Version 0.12
   o Added the 'logbook' function which can be used to more easily retrieve the psychonetrics logbook
   o The 'partialprune' function has been updated and now allows for pruning specific matrices as well as returning different models
   o Fixed some instances where the 'equal' argument wasn't working
+  o 'partialprune' now supports multiple matrices
+  o 'unionmodel' and 'intersectionmodel' now support the 'matrices' argument
 
 Changes in Version 0.11.5
   o Fixes to support Matrix 1.7-0
